// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/calculations/Calculation should match snapshot - count 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="Calculation count fooClass  hovered"
      tabindex="0"
    >
      <div />
      <span
        class="calculationLabel"
      >
        Count
      </span>
      <span
        class="calculationValue"
      >
        2
      </span>
    </div>
  </span>
</div>
`;

exports[`components/calculations/Calculation should match snapshot - countUniqueValue 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="Calculation countUniqueValue fooClass  hovered"
      tabindex="0"
    >
      <div />
      <span
        class="calculationLabel"
      >
        Unique
      </span>
      <span
        class="calculationValue"
      >
        1
      </span>
    </div>
  </span>
</div>
`;

exports[`components/calculations/Calculation should match snapshot - countValue 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="Calculation countValue fooClass  hovered"
      tabindex="0"
    >
      <div />
      <span
        class="calculationLabel"
      >
        Values
      </span>
      <span
        class="calculationValue"
      >
        1
      </span>
    </div>
  </span>
</div>
`;

exports[`components/calculations/Calculation should match snapshot - none 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="Calculation none fooClass  hovered"
      tabindex="0"
    >
      <div />
      <span
        class="calculationLabel"
      >
        Calculate
      </span>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-411e09-MuiSvgIcon-root"
        data-testid="ExpandMoreIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
        />
      </svg>
    </div>
  </span>
</div>
`;
